# DANTE

./: .gitignore  DOTS_Rastrigin_200d_colab.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  top50_points.npy
Architected Materials/: data.xlsx  input333.npy  run.sh
CCAs/: run.sh
CCAs/DOTS-BCC/: round3_DFT.csv  round4_DFT.csv
CCAs/DOTS-FCC/: round3_DFT.csv  round5_DFT.csv  run.py
CNN_BO/: README.md  test.py
CNN_BO/bayes_opt_dnn/: NNRegressor.py  __init__.py  acquisition.py  bayesian_optimization.py  constraint.py  domain_reduction.py  logger.py  parameter.py  target_space.py
CNN_BO/dante/: obj_functions.py  utils.py
Cyclic peptide design/: README.md
Electron Ptychography/: BO.py  DOTS.py  README.md  run.sh
Evaluations on Synthetic Functions/Exact function/: DOTS.py
Evaluations on Synthetic Functions/Surrogate model/: functions.py  run.sh  search_method.py
Evaluations_on_Synthetic_Functions/Exact_Function/: README.md  run.py  run.sh
Evaluations_on_Synthetic_Functions/Surrogate_Model/: run.py
Examples/: readme
SelfDriving_Virtual_Labs/Architected_Materials_Design/: README.md  data.xlsx  input333.npy  run.py
SelfDriving_Virtual_Labs/CCAs_Design/: DANTE_VL_CCAs_Design.ipynb  DOTS_VL_CCAs_Design.ipynb  README.md
SelfDriving_Virtual_Labs/Cyclic_Peptide_Design/: README.md  run.sh
SelfDriving_Virtual_Labs/Electron_Ptychography/: DANTE.py  DANTE_VL_Electron_Ptychography_Reconstruction_Optimization.ipynb  DOTS.py  DOTS_VL_Electron_Ptychography_Reconstruction_Optimization.ipynb  README.md  TuRBO5.py  requirements.txt  run.py
SelfDriving_Virtual_Labs/Lunar_Landing/: README.md  (+5 more)
dante/: deep_active_learning.py  get20points.py  neural_surrogate.py  obj_functions.py  tree_exploration.py  utils.py
data/: Rosenbrock-40d-test.npy  Rosenbrock-40d-train.npy  Schwefel-40d-test.npy  Schwefel-40d-train.npy
dots/: __init__.py  dots.py  dots_exact.py  functions.py  functions_exact.py  nn.py
notebooks/: DANTE_Rastrigin_200d.ipynb  DANTE_VL_Architected_Materials_Design.ipynb  DANTE_VL_CCAs_Design.ipynb  DANTE_VL_Cyclic_Peptide_Design.ipynb  DANTE_VL_Electron_Ptychography_Reconstruction_Optimization.ipynb  DANTE_VL_Lunar_Landing.ipynb  DOTS_Rastrigin_200d_colab.ipynb  DOTS_VL_Cyclic_Peptide_Design.ipynb
source_data_for_main_article_figrues/: Source_Data_ED_Figure1.xlsx  Source_Data_Figure4.xlsx
tests/: test_deep_active_learning.py  test_neural_surrogate.py  test_obj_functions.py  test_tree_exploration.py  test_utils.py
(+743 files in other folders)
